alignment fixes

--- a/src/components/ActionHeader/ActionHeader.module.scss
+++ b/src/components/ActionHeader/ActionHeader.module.scss
@@ -4,7 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 20px;
     &.alignEnd {
         justify-content: flex-end;
     }
@@ -12,7 +11,7 @@
         list-style-type: none;
         display: inline-flex;
         li {
-            margin-right: 20px;
+            margin-right: 10px;
         }
     }
     .loggedInActionList {
